# clipring

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
docs/: osc52.md
examples/: README.md  seed-demo.sh  shell-integration.sh
scripts/: smoke.sh
src/: base64.rs  cli.rs  jsonl.rs  lib.rs  main.rs  osc52.rs  picker.rs  ring.rs  store.rs  textutil.rs
tests/: cli.rs
